# a-maze-ing

./: .gitignore  BUILD.md  CMakeLists.txt
assets/: RENDER_CONVENTIONS.md
assets/themes/nature/: manifest.txt  tiles.txt
data/: items.txt
data/dialogs/: nature.txt
data/mazes/: nature.maze
data/strings/: en.lang
docs/superpowers/plans/: 2026-05-25-a-maze-ing-vertical-slice-review.md  2026-05-25-a-maze-ing-vertical-slice.md  vertical-slice-acceptance-checklist.md
docs/superpowers/specs/: 2026-05-25-a-maze-ing-design-followup-suggestions.md  2026-05-25-a-maze-ing-design-suggestions.md  2026-05-25-a-maze-ing-design.md
src/: asset.c  asset.h  audio.c  audio.h  camera.c  camera.h  collision.c  collision.h  dialogs.c  dialogs.h  entity.c  entity.h  entity_hazard.c  entity_hazard.h  entity_interact.c  entity_interact.h  entity_item.c  entity_item.h  entity_npc.c  entity_npc.h  game.c  game.h  input.c  input.h  interaction.c  interaction.h  items.c  items.h  localization.c  localization.h  main.c  maze_data.c  maze_data.h  parallax.c  parallax.h  player.c  player.h  profile.c  profile.h  render.c  (+29 more)
tests/: test_camera.c  test_collision.c  test_dialog_repeat.c  test_dialogs.c  test_entity_behaviors.c  test_game_fixture.c  test_input_remap.c  test_interaction.c  test_items.c  test_localization.c  test_main.c  test_maze_data.c  test_save_migrations.c  test_save_reset.c  test_save_roundtrip.c  test_shadow.c  test_sprite_manifest.c  test_time_of_day.c  test_util_math.c  test_util_paths.c  test_validator.c
tests/fixtures/: de.lang  dialogs.txt  en.lang  items.txt  malformed.lang  manifest.txt  mini.maze
tests/fixtures/bad/: duplicate_id.maze  missing_header.maze  unknown_item.maze  unreachable.maze  wrong_prefix.maze
tests/fixtures/themes/test/: manifest.txt  tiles.txt
tools/: gen_placeholder_audio.sh  gen_placeholders.sh  headless_ui_stubs.c  smoke_test.c  validate.c  validate.h  validator_registry.c
